Fixed footer from covering bottom

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,9 +15,22 @@
  *= require_tree .
  *= require_self
  */
-
- footer {
- 	position: fixed;
- 	bottom: 0;
- 	width: 100%;
+ * {
+ 	margin: 0;
  }
+
+html, body {
+	height: 100%;
+}
+
+.wrapper{
+	min-height: 100%;
+    margin: 0 auto -235px; 
+}
+
+footer, .push {
+ 	width: 100%;
+ 	height: 235px; 
+}
+
+
