--- a/app/assets/stylesheets/ideas_style.css
+++ b/app/assets/stylesheets/ideas_style.css
@@ -123,3 +123,11 @@ nav{
        -o-transition: border .2s ease-in-out;
           transition: border .2s ease-in-out;
 }
+
+html, body {
+	height: 100%;
+}
+
+bodyContainer {
+	min-height: 100%;	
+}
